--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@react-email/components": "^0.0.11",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "react-email": "^1.9.5",
     "reflect-metadata": "^0.1.13",
+    "resend": "^2.0.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.33.0",
     "sequelize-typescript": "^2.1.5"
@@ -43,11 +47,13 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.8.8",
     "@types/passport-jwt": "^3.0.11",
     "@types/passport-local": "^1.0.37",
+    "@types/react": "^18.2.39",
     "@types/sequelize": "^4.28.17",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
