--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react": "^18.2.39",
     "@types/sequelize": "^4.28.17",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.0",
