--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "react-email": "^1.9.5",
+    "react-email": "^4.2.8",
     "reflect-metadata": "^0.1.13",
     "resend": "^2.0.0",
     "rxjs": "^7.8.1",
@@ -52,8 +52,9 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.23",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.8.8",
     "@types/passport-jwt": "^3.0.11",
     "@types/passport-local": "^1.0.37",
