--- a/package.json
+++ b/package.json
@@ -7,20 +7,30 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\"",
+    "format": "prettier --write \"{src,db}/**/*.ts\"",
+    "format:check": "prettier --check \"{src,db}/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test,db}/**/*.*s\" --fix",
     "prepare": "husky install",
     "check:style": "npm run format:check && npm run lint",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "db:seed": "npx sequelize-cli db:seed:all",
+    "db:seed:undo": "npx sequelize-cli db:seed:undo:all",
+    "redis:check": "ts-node src/scripts/redis-check.ts"
+  },
+  "sequelize": {
+    "config": "config/config.js",
+    "migrations-path": "db/migrations",
+    "seeders-path": "db/seeders"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -30,11 +40,15 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.10",
+    "@nestjs/throttler": "^5.1.0",
     "@nestjs/websockets": "^10.2.10",
     "@react-email/components": "^0.0.11",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "dotenv": "^16.3.1",
+    "ioredis": "^5.3.2",
+    "joi": "^17.13.3",
     "moment": "^2.29.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -54,7 +68,6 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.1",
-    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.23",
     "@types/jest": "^29.5.2",
     "@types/multer": "^2.0.0",
@@ -74,13 +87,14 @@
     "jest": "^29.5.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.3.3",
+    "sequelize-cli": "^6.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "5.3.3"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx,json,css,md}": [
